# pinkie

./: .gitignore  Cargo.toml  LICENSE-MIT  justfile  readme.md
pinkie-macros/: Cargo.toml
pinkie-macros/src/: lib.rs
pinkie-parser/: Cargo.toml
pinkie-parser/src/: lib.rs
src/: lib.rs
tests/: collect.rs  collect_other_file.rs  whitespaces.rs
