[package]
name = "pinkie-macros"
description = "Internal crate. Please use 'pinkie' instead."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# documentation.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
lightningcss = { workspace = true, optional = true }
pinkie-parser = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true }
xxhash-rust = { workspace = true }

[features]
validation = ["dep:lightningcss", "pinkie-parser/spans"]
location = []
